first commit of new site
Signed-off-by: Paul McCarty <paulm@buildstack.io>

--- a/cfp.html
+++ b/cfp.html
@@ -12,7 +12,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="githax-com.github.io" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"GitHax Website","headline":"githax-com.github.io","name":"githax-com.github.io","url":"/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"GitHax Website","headline":"githax-com.github.io","url":"/cfp.html"}</script>
 <!-- End Jekyll SEO tag -->
 
     <head>
@@ -64,76 +64,22 @@
 </div>
 <div class="bg-overlay"></div>
 
-
-        <!--================Home Banner Area =================-->
-        <section class="home_banner_area crt static">
-            <div class="banner_inner">
-				<div class="container">
-					<div class="banner_content">
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-        					<h3>GitHax is an early warning system for software supply chain attacks</h3>
-					</div>
-				</div>
-            </div>
-        </section>
-        <!--================End Home Banner Area =================-->
- 	<br>
- 	<br>
-<!--================Start LatestAttacks Area =================-->
+        <!--================Welcome Area =================-->
         <section class="welcome_area pad_top">
             <div class="container">
                 <div class="welcome_inner row">
                     <div class="col">
                         <div class="main_title crt">
-                            <h2>Recent Attacks</h2>
+                            <h2>Call for Papers (CFP)</h2>
                         </div>
-			<!-- TEMPLATE -->
                         <div class="code_text">
-				<iframe class="airtable-embed" src="https://airtable.com/embed/appadLVAvoTbXwUrY/shr4zg8UcE752M4IH" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+                            <center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScK-rId5Z2jCtrtdU3BufSaVgIX_8ue55YtRb5Hi-8SFpXKjg/viewform?embedded=true" width="670" height="4494" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-<!--================End LatestAttacks Area =================-->
-
-
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
-
-        <!--================Welcome Area =================-->
         <!--================End Welcome Area =================-->
-
 
         <!--================ Start footer Area  =================-->	
         <footer class="footer-area">
