--- a/code.html
+++ b/code.html
@@ -12,7 +12,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="githax-com.github.io" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"GitHax Website","headline":"githax-com.github.io","name":"githax-com.github.io","url":"/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"GitHax Website","headline":"githax-com.github.io","url":"/code.html"}</script>
 <!-- End Jekyll SEO tag -->
 
     <head>
@@ -64,76 +64,28 @@
 </div>
 <div class="bg-overlay"></div>
 
-
-        <!--================Home Banner Area =================-->
-        <section class="home_banner_area crt static">
-            <div class="banner_inner">
-				<div class="container">
-					<div class="banner_content">
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-        					<h3>GitHax is an early warning system for software supply chain attacks</h3>
-					</div>
-				</div>
-            </div>
-        </section>
-        <!--================End Home Banner Area =================-->
- 	<br>
- 	<br>
-<!--================Start LatestAttacks Area =================-->
+        <!--================Welcome Area =================-->
         <section class="welcome_area pad_top">
             <div class="container">
                 <div class="welcome_inner row">
                     <div class="col">
                         <div class="main_title crt">
-                            <h2>Recent Attacks</h2>
+                            <h2>Latest Software Supply Chain Attacks</h2>
                         </div>
-			<!-- TEMPLATE -->
                         <div class="code_text">
-				<iframe class="airtable-embed" src="https://airtable.com/embed/appadLVAvoTbXwUrY/shr4zg8UcE752M4IH" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+                            <h3 class="crt">hardhat-dotenv</h3>
+                            <p>When a meeting is held under the Chatham House Rule, participants are free to use the information received, but the identity or affiliation of speakers and participants may not be revealed.</p>
+                            <p>Gold Coast BSides is dedicated to providing an inclusive, harassment-free conference experience for everyone. We encourage all participants to make each other feel welcome in activities throughout the conference.</p>
+                            <p>We do not tolerate harassment of any kind. Harassment includes, but is not limited to, deliberate actions such as intimidation or targeting individuals in a manner that makes them feel uncomfortable, unwelcome, or afraid.</p>
+                            <p>Participants asked to stop any harassing behavior are expected to comply immediately. If a participant engages in harassing behavior, organizers may take any action they deem appropriate, including expulsion from the event and any future Gold Coast BSides.</p>
+                            <p>If you are being made to feel unwelcome, notice that someone else is being harassed, or have any other concerns, please contact an organizer as soon as possible. If you are not sure who to contact, reach out to <b>hello@githax.com</b>.</p>
+                            <p>By being part of Gold Coast BSides you agree to abide by this Code of Conduct.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-<!--================End LatestAttacks Area =================-->
-
-
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
-
-        <!--================Welcome Area =================-->
         <!--================End Welcome Area =================-->
-
 
         <!--================ Start footer Area  =================-->	
         <footer class="footer-area">
