--- a/latest-attacks.html
+++ b/latest-attacks.html
@@ -12,7 +12,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="githax-com.github.io" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"GitHax Website","headline":"githax-com.github.io","name":"githax-com.github.io","url":"/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"GitHax Website","headline":"githax-com.github.io","url":"/latest-attacks.html"}</script>
 <!-- End Jekyll SEO tag -->
 
     <head>
@@ -64,76 +64,37 @@
 </div>
 <div class="bg-overlay"></div>
 
-
-        <!--================Home Banner Area =================-->
-        <section class="home_banner_area crt static">
-            <div class="banner_inner">
-				<div class="container">
-					<div class="banner_content">
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-						<br>
-        					<h3>GitHax is an early warning system for software supply chain attacks</h3>
-					</div>
-				</div>
-            </div>
-        </section>
-        <!--================End Home Banner Area =================-->
- 	<br>
- 	<br>
-<!--================Start LatestAttacks Area =================-->
+        <!--================Welcome Area =================-->
         <section class="welcome_area pad_top">
             <div class="container">
                 <div class="welcome_inner row">
-                    <div class="col">
+                    <div class="col-lg-6 offset-lg-1">
                         <div class="main_title crt">
-                            <h2>Recent Attacks</h2>
+                            <h2>Latest Attack Data</h2>
                         </div>
-			<!-- TEMPLATE -->
-                        <div class="code_text">
-				<iframe class="airtable-embed" src="https://airtable.com/embed/appadLVAvoTbXwUrY/shr4zg8UcE752M4IH" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+                        <div class="code_text smaller">
+                            <p>Gold Coast BSides is a one day event held at COHORT in Southport.  BSides is a community run and community-focused cybersecurity conference.  It will have one track of between 8 and 10 talks.</p>
+
+                            <h3 class="crt">Audience</h3>
+                            <p>This is an inclusive community-focused event.</p>
+                            <p>As this is our first year we wanted to start small so there will be a maximum of 100 tickets sold for this event.</p>
+
+                            <h3 class="crt">Chatham House Rule</h3>
+                            <p>When a meeting is held under the Chatham House Rule, participants are free to use the information received, but the identity or affiliation of speakers and participants may not be revealed.</p>
+
+                            <h3 class="crt">A Community Event</h3>
+                            <p>Gold Coast BSides is a community effort. It has been hosted by various companies who strive to keep it going in order to provide a forum for discussion among cybersecurity practitioners on the Gold Coast.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-5" style="float: left;">
+                        <div class="welcome_img">
+                            <img class="img-fluid" src="img/githax_white_website_banner.jpg" alt="Gold Coast BSides" float: right;>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-<!--================End LatestAttacks Area =================-->
-
-
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
- 	<br>
-
-        <!--================Welcome Area =================-->
         <!--================End Welcome Area =================-->
-
 
         <!--================ Start footer Area  =================-->	
         <footer class="footer-area">
