added the contact page
Signed-off-by: Paul McCarty <paulm@buildstack.io>

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="githax-com.github.io" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"GitHax Website","headline":"githax-com.github.io","url":"/latest-attacks.html"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"GitHax Website","headline":"githax-com.github.io","url":"/code.html"}</script>
 <!-- End Jekyll SEO tag -->
 
     <head>
@@ -46,7 +46,7 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
-								<!-- <li class="nav-item"><a class="nav-link" href="/latest-attacks.html">Latest Attacks</a></li> -->
+								<!-- <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li> -->
 							</ul>
 						</div>
 					</div>
@@ -68,27 +68,14 @@
         <section class="welcome_area pad_top">
             <div class="container">
                 <div class="welcome_inner row">
-                    <div class="col-lg-6 offset-lg-1">
+                    <div class="col">
                         <div class="main_title crt">
-                            <h2>Latest Attack Data</h2>
+                            <h2>Contact GitHax</h2>
                         </div>
-                        <div class="code_text smaller">
-                            <p>Gold Coast BSides is a one day event held at COHORT in Southport.  BSides is a community run and community-focused cybersecurity conference.  It will have one track of between 8 and 10 talks.</p>
-
-                            <h3 class="crt">Audience</h3>
-                            <p>This is an inclusive community-focused event.</p>
-                            <p>As this is our first year we wanted to start small so there will be a maximum of 100 tickets sold for this event.</p>
-
-                            <h3 class="crt">Chatham House Rule</h3>
-                            <p>When a meeting is held under the Chatham House Rule, participants are free to use the information received, but the identity or affiliation of speakers and participants may not be revealed.</p>
-
-                            <h3 class="crt">A Community Event</h3>
-                            <p>Gold Coast BSides is a community effort. It has been hosted by various companies who strive to keep it going in order to provide a forum for discussion among cybersecurity practitioners on the Gold Coast.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-5" style="float: left;">
-                        <div class="welcome_img">
-                            <img class="img-fluid" src="img/githax_white_website_banner.jpg" alt="Gold Coast BSides" float: right;>
+                        <div class="code_text">
+                            <h3 class="crt">hardhat-dotenv</h3>
+				<script src="https://js.hsforms.net/forms/embed/49161744.js" defer></script>
+<div class="hs-form-frame" data-region="na1" data-form-id="1124bfec-6c8d-43a5-bd9e-9873eb940dbf" data-portal-id="49161744"></div>
                         </div>
                     </div>
                 </div>
