changed the tagline and made it h2
Signed-off-by: Paul McCarty <paulm@buildstack.io>

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<br>
 						<br>
 						<br>
-        					<h3>GitHax is an early warning system for software supply chain attacks</h3>
+        					<h2>Software supply chain threat intelligence</h2>
 					</div>
 				</div>
             </div>
