changed to recent threat reports
Signed-off-by: Paul McCarty <paulm@buildstack.io>

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="welcome_inner row">
                     <div class="col">
                         <div class="main_title crt">
-                            <h2>Recent Attacks</h2>
+                            <h2>Recent Threat Reports</h2>
                         </div>
 			<!-- TEMPLATE -->
                         <div class="code_text">
