--- a/index.html
+++ b/index.html
@@ -21,19 +21,25 @@
         <header class="header_area">
             <div class="main_menu">
             	<nav class="navbar navbar-expand-lg navbar-light">
-					<div class="container box_1620">
-						<!-- Brand and toggle get grouped for better mobile display -->
-						<!-- <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.jpg" alt="GitHax"></a> -->
-						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<!-- Collect the nav links, forms, and other content for toggling -->
-						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-							<ul class="nav navbar-nav menu_nav ml-auto">
-								<!-- <li class="nav-item"><a class="nav-link" href="/latest-attacks.html">Latest Attacks</a></li> -->
-							</ul>
+			<div class="container box_1620">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt="Red Team Summit"></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+					<ul class="nav navbar-nav menu_nav ml-auto">
+						<li class="nav-item active"><a class="nav-link" href="/index.html">Home</a></li>
+						<li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
+						<li class="nav-item"><a class="nav-link" href="/code.html">Conduct</a></li>
+						<li class="nav-item"><a class="nav-link" href="/guidelines.html">Guidelines</a></li>
+						<li class="nav-item"><a class="nav-link" href="/schedule.html">Schedule</a></li>
+						<li class="nav-item"><a class="nav-link" href="/venue.html">Venue</a></li>
+						<li class="nav-item"><a class="nav-link" href="mailto: info@redteamsummit.com">Contact</a></li>
+						</ul>
 						</div>
 					</div>
             	</nav>
