--- a/index.html
+++ b/index.html
@@ -33,12 +33,8 @@
 				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu_nav ml-auto">
 						<li class="nav-item active"><a class="nav-link" href="/index.html">Home</a></li>
-						<li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
-						<li class="nav-item"><a class="nav-link" href="/code.html">Conduct</a></li>
-						<li class="nav-item"><a class="nav-link" href="/guidelines.html">Guidelines</a></li>
-						<li class="nav-item"><a class="nav-link" href="/schedule.html">Schedule</a></li>
-						<li class="nav-item"><a class="nav-link" href="/venue.html">Venue</a></li>
-						<li class="nav-item"><a class="nav-link" href="mailto: info@redteamsummit.com">Contact</a></li>
+						<li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
+						<li class="nav-item"><a class="nav-link" href="mailto: info@githax.com">Contact</a></li>
 						</ul>
 						</div>
 					</div>
