--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             	<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container box_1620">
 				<!-- Brand and toggle get grouped for better mobile display -->
-				<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt="Red Team Summit"></a>
+				<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt="GitHax"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -111,6 +111,7 @@
 
  	<br>
  	<br>
+<iframe class="airtable-embed" src="https://airtable.com/embed/appadLVAvoTbXwUrY/shrSG7MQbkFgbAs5p" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
  	<br>
  	<br>
  	<br>
