changed menu item to just Portal
Signed-off-by: Paul McCarty <paulm@buildstack.io>

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu_nav ml-auto">
-                                                <li class="nav-item"><a class="nav-link" href="https://portal.githax.com">Threat Portal</a></li>
+                                                <li class="nav-item"><a class="nav-link" href="https://portal.githax.com">Portal</a></li>
                                                 <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
 						</ul>
 						</div>
@@ -96,7 +96,7 @@
                 <div class="welcome_inner row">
                     <div class="col">
                         <div class="main_title crt">
-                            <h2>Recent Threat Reports</h2>
+                            <h2>GitHax Community Threat Reports</h2>
                         </div>
 			<!-- TEMPLATE -->
                         <div class="code_text">
