--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 					<ul class="nav navbar-nav menu_nav ml-auto">
                                                 <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
+                                                <li class="nav-item"><a class="nav-link" href="https://api.maliciouspackages.com">Malicious Packages API</a></li>
 						</ul>
 						</div>
 					</div>
